[tool.poetry]
name = "corentin-regent-tmp"
version = "2.0.1b0"
description = "My test project"
authors = ["Corentin Régent <corentin.regent@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
